Add checkbox with categories to create note

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "MemoryGame",
-  "description": "Multiplayer Memory Game with React and FeathersJS.",
+  "name": "NiftyNotes",
+  "description": "Write down your notes.",
   "version": "0.0.0",
   "homepage": "",
   "main": "src/",
@@ -13,15 +13,18 @@
   "contributors": [],
   "bugs": {},
   "engines": {
-    "node": ">= 0.12.0"
   },
   "scripts": {
-    "test": "mocha test/setup.js --recursive src/**/*.test.js",
-    "test:watch": "mocha -w test/setup.js -G --recursive src/*.test.js src/**/*.test.js",
-    "jshint": "jshint src/. test/. --config",
-    "start": "node src/",
-    "mocha": "mocha test/ --recursive"
+    "clean": "rimraf dist",
+    "build:webpack": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js",
+    "build": "npm run clean && npm run build:webpack",
+    "start": "node src/index.js",
+    "lint": "eslint src",
+    "test": "mocha test/setup.js --recursive client/**/*.test.js",
+    "test:watch": "mocha -w test/setup.js --recursive client/**/*.test.js"
+
   },
+  "node": "v6.9",
   "dependencies": {
     "body-parser": "^1.15.2",
     "compression": "^1.6.2",
@@ -61,24 +64,35 @@
     "babel-preset-react": "^6.11.1",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.16.0",
+    "babel-register": "^6.16.3",
+    "chai": "^3.5.0",
+    "chai-enzyme": "^0.5.2",
+    "chai-spies": "^0.7.1",
     "cross-env": "^2.0.1",
     "css-loader": "^0.25.0",
+    "deep-freeze-node": "^1.1.2",
+    "enzyme": "^2.5.1",
     "eslint": "^3.4.0",
     "eslint-plugin-babel": "^3.3.0",
     "eslint-plugin-react": "^6.2.0",
     "eventsource-polyfill": "^0.9.6",
     "exports-loader": "^0.6.3",
     "file-loader": "^0.9.0",
+    "ignore-styles": "^5.0.1",
+    "jsdom": "^9.8.0",
     "html-webpack-plugin": "^2.22.0",
     "imports-loader": "^0.6.5",
     "jshint": "^2.9.3",
     "json-loader": "^0.5.4",
     "mocha": "^3.0.2",
+    "mocha-eslint": "^3.0.1",
     "node-sass": "^3.11.2",
+    "react-addons-test-utils": "^15.3.2",
     "request": "^2.74.0",
     "rimraf": "^2.5.4",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
+    "watchify": "^3.7.0",
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.12.2"
